--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "readline-sync": "^1.4.10",
     "redis": "^5.8.2",
     "string-similarity": "^4.0.4",
-    "whatsapp-web.js": "^1.26.0"
+    "whatsapp-web.js": "^1.26.0",
+    "express": "^4.19.2",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
